fix sub page view on mobile

--- a/assets/sass/theme/_responsive.scss
+++ b/assets/sass/theme/_responsive.scss
@@ -90,6 +90,7 @@
 	}
 	#singlePortfolio {
 		top: 0;
+		opacity: 1;
 		margin: 0 0 15px;
 		padding: 0 15px;
 		.pane {
